vlib/v/checker/tests/array_sort_err.vv
fn main() {
	mut arr := [3, 2, 1]
	arr.sort(a < b, a)
    arr.sort(a == b)
    arr.sort(a > a)
    arr.sort(c > d)
}
